--- a/environment.yml
+++ b/environment.yml
@@ -5,418 +5,68 @@ channels:
   - conda-forge
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
+
 dependencies:
+  # 基础系统依赖
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - anaconda-anon-usage=0.4.4=py39hfc0e8ea_100
-  - archspec=0.2.3=pyhd3eb1b0_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - attrs=24.2.0=py39h06a4308_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - beautifulsoup4=4.12.3=py39h06a4308_0
   - blas=1.0=mkl
-  - boltons=23.0.0=py39h06a4308_0
-  - brotli-python=1.0.9=py39h6a678d5_8
-  - bzip2=1.0.8=h5eee18b_6
-  - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2024.9.24=h06a4308_0
-  - cairo=1.16.0=hb05425b_5
-  - certifi=2024.8.30=py39h06a4308_0
-  - cffi=1.17.1=py39h1fdaa30_0
-  - chardet=4.0.0=py39h06a4308_1003
-  - charset-normalizer=3.3.2=pyhd3eb1b0_0
-  - click=8.1.7=py39h06a4308_0
-  - comm=0.2.1=py39h06a4308_0
-  - conda=24.11.0=py39h06a4308_0
-  - conda-build=24.11.1=py39h06a4308_0
-  - conda-content-trust=0.2.0=py39h06a4308_1
-  - conda-index=0.5.0=py39h06a4308_0
-  - conda-libmamba-solver=24.9.0=pyhd3eb1b0_0
-  - conda-package-handling=2.4.0=py39h06a4308_0
-  - conda-package-streaming=0.11.0=py39h06a4308_0
-  - cryptography=43.0.3=py39h7825ff9_1
-  - cython=3.0.11=py39h5eee18b_0
-  - debugpy=1.6.7=py39h6a678d5_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - distro=1.9.0=py39h06a4308_0
-  - exceptiongroup=1.2.0=py39h06a4308_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.6.3=h6a678d5_0
-  - filelock=3.13.1=py39h06a4308_0
-  - fmt=9.1.0=hdb19cb5_1
-  - fontconfig=2.14.1=h55d465d_3
-  - freetype=2.12.1=h4a9f257_0
-  - frozendict=2.4.2=py39h5eee18b_0
-  - gdk-pixbuf=2.42.10=h5eee18b_1
-  - glib=2.78.4=h6a678d5_0
-  - glib-tools=2.78.4=h6a678d5_0
-  - icu=73.1=h6a678d5_0
-  - idna=3.7=py39h06a4308_0
-  - importlib-metadata=7.0.1=py39h06a4308_0
-  - importlib_metadata=7.0.1=hd3eb1b0_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
-  - ipykernel=6.29.5=py39h06a4308_0
-  - ipython=8.15.0=py39h06a4308_0
-  - jedi=0.19.1=py39h06a4308_0
-  - jinja2=3.1.4=py39h06a4308_1
-  - jpeg=9e=h5eee18b_3
-  - jsonpatch=1.33=py39h06a4308_1
-  - jsonpointer=2.1=pyhd3eb1b0_0
-  - jsonschema=4.23.0=py39h06a4308_0
-  - jsonschema-specifications=2023.7.1=py39h06a4308_0
-  - jupyter_client=8.6.0=py39h06a4308_0
-  - jupyter_core=5.7.2=py39h06a4308_0
-  - krb5=1.20.1=h143b758_1
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.40=h12ee557_0
-  - lerc=3.0=h295c915_0
-  - libarchive=3.7.4=hfab0078_0
-  - libcurl=8.9.1=h251f7ec_0
-  - libdeflate=1.17=h5eee18b_1
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libffi=3.4.4=h6a678d5_1
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libglib=2.78.4=hdc74915_0
-  - libgomp=14.2.0=h77fa898_1
-  - libiconv=1.16=h5eee18b_3
-  - liblief=0.12.3=h6a678d5_0
-  - libmamba=1.5.8=hfe524e5_3
-  - libmambapy=1.5.8=py39h2dafd23_3
-  - libnghttp2=1.57.0=h2d74bed_0
-  - libpng=1.6.39=h5eee18b_0
-  - libsodium=1.0.18=h7b6447c_0
-  - libsolv=0.7.24=he621ea3_1
-  - libsqlite=3.46.0=hde9e2c9_0
-  - libssh2=1.11.0=h251f7ec_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtiff=4.5.1=h6a678d5_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libwebp-base=1.3.2=h5eee18b_1
-  - libxcb=1.15=h7f8727e_0
-  - libxml2=2.13.1=hfdd30dd_2
-  - libzlib=1.2.13=h4ab18f5_6
-  - lz4-c=1.9.4=h6a678d5_1
-  - markupsafe=2.1.3=py39h5eee18b_0
-  - matplotlib-inline=0.1.6=py39h06a4308_0
-  - menuinst=2.2.0=py39h06a4308_0
   - mkl=2023.1.0=h213fc3f_46344
   - mkl-include=2023.1.0=h06a4308_46344
-  - mkl-service=2.4.0=py39h5eee18b_1
-  - mkl_fft=1.3.11=py39h5eee18b_0
-  - mkl_random=1.2.8=py39h1128e8f_0
-  - more-itertools=10.3.0=py39h06a4308_0
+  
+  # Python环境
+  - python=3.9.20=he870216_1
+  - pip=24.2=py39h06a4308_0
+  - setuptools=75.1.0=py39h06a4308_0
+  - wheel=0.44.0=py39h06a4308_0
+  
+  # 系统库
+  - openssl=3.0.15=h5eee18b_0
+  - ca-certificates=2024.9.24=h06a4308_0
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libffi=3.4.4=h6a678d5_1
+  - zlib=1.2.13=h4ab18f5_6
+  - sqlite=3.45.3=h5eee18b_0
+  - tk=8.6.14=h39e8969_0
   - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=py39h06a4308_0
-  - ninja=1.12.1=h06a4308_0
-  - ninja-base=1.12.1=hdb19cb5_0
+  - readline=8.2=h5eee18b_0
+  - bzip2=1.0.8=h5eee18b_6
+  - xz=5.4.6=h5eee18b_1
+  
+  # 图像处理库
+  - pillow=11.0.0=py39hfdbf927_0
   - openjpeg=2.5.2=he7f1fd0_0
+  - jpeg=9e=h5eee18b_3
+  - libtiff=4.5.1=h6a678d5_0
+  - lcms2=2.12=h3be6417_0
   - openslide=3.4.1=h7773abc_6
   - openslide-python=1.3.1=py39hd1e30aa_1
-  - openssl=3.0.15=h5eee18b_0
-  - packaging=24.1=py39h06a4308_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - patch=2.7.6=h7b6447c_1001
-  - patchelf=0.17.2=h6a678d5_0
-  - pcre2=10.42=hebb0a14_1
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=11.0.0=py39hfdbf927_0
-  - pip=24.2=py39h06a4308_0
-  - pixman=0.40.0=h7f8727e_1
-  - pkginfo=1.11.2=py39h06a4308_0
-  - platformdirs=3.10.0=py39h06a4308_0
-  - pluggy=1.0.0=py39h06a4308_1
-  - prompt-toolkit=3.0.43=py39h06a4308_0
-  - prompt_toolkit=3.0.43=hd3eb1b0_0
-  - psutil=5.9.0=py39h5eee18b_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - py-lief=0.12.3=py39h6a678d5_0
-  - pybind11-abi=4=hd3eb1b0_1
-  - pycosat=0.6.6=py39h5eee18b_1
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.15.1=py39h06a4308_1
-  - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.20=he870216_1
-  - python-dateutil=2.9.0post0=py39h06a4308_2
-  - python-libarchive-c=5.1=pyhd3eb1b0_0
-  - python_abi=3.9=2_cp39
-  - pytz=2024.1=py39h06a4308_0
-  - pyyaml=6.0.2=py39h5eee18b_0
-  - pyzmq=25.1.2=py39h6a678d5_0
-  - readline=8.2=h5eee18b_0
-  - referencing=0.30.2=py39h06a4308_0
-  - reproc=14.2.4=h6a678d5_2
-  - reproc-cpp=14.2.4=h6a678d5_2
-  - requests=2.32.3=py39h06a4308_1
-  - rpds-py=0.10.6=py39h4aa5aa6_1
-  - ruamel.yaml=0.18.6=py39h5eee18b_0
-  - ruamel.yaml.clib=0.2.8=py39h5eee18b_0
-  - setuptools=75.1.0=py39h06a4308_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - soupsieve=2.5=py39h06a4308_0
-  - sqlite=3.45.3=h5eee18b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tbb=2021.8.0=hdb19cb5_0
-  - tk=8.6.14=h39e8969_0
-  - tomli=2.0.1=py39h06a4308_0
-  - tornado=6.4.1=py39h5eee18b_0
-  - tqdm=4.66.5=py39h2f386ee_0
-  - traitlets=5.14.3=py39h06a4308_0
-  - typing=3.10.0.0=py39h06a4308_0
-  - typing_extensions=4.11.0=py39h06a4308_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.44.0=py39h06a4308_0
-  - xz=5.4.6=h5eee18b_1
-  - yaml=0.2.5=h7b6447c_0
-  - yaml-cpp=0.8.0=h6a678d5_1
-  - zeromq=4.3.5=h6a678d5_0
-  - zipp=3.20.2=py39h06a4308_0
-  - zlib=1.2.13=h4ab18f5_6
-  - zstandard=0.23.0=py39h2c38b39_1
-  - zstd=1.5.6=hc292b87_0
-  - pip:
-      - absl-py==2.1.0
-      - accelerate==1.1.1
-      - affine==2.4.0
-      - aiobotocore==2.5.4
-      - aiohappyeyeballs==2.4.3
-      - aiohttp==3.11.7
-      - aioitertools==0.12.0
-      - aiosignal==1.3.1
-      - anndata==0.10.9
-      - anyio==4.6.2.post1
-      - appdirs==1.4.4
-      - argon2-cffi==23.1.0
-      - argon2-cffi-bindings==21.2.0
-      - array-api-compat==1.9.1
-      - arrow==1.3.0
-      - asciitree==0.3.3
-      - async-lru==2.0.4
-      - async-timeout==5.0.1
-      - babel==2.16.0
-      - bcrypt==4.2.1
-      - bleach==6.2.0
-      - botocore==1.31.17
-      - cachetools==5.5.0
-      - cellvit-light==0.0.5
-      - clearml==1.16.5
-      - click-plugins==1.1.1
-      - cligj==0.7.2
-      - cloudpickle==3.1.0
-      - colorcet==3.1.0
-      - contourpy==1.3.0
-      - cucim-cu12==24.6.0
-      - cuda-python==12.6.2.post1
-      - cudf-cu12==24.6.1
-      - cupy-cuda12x==13.3.0
-      - cycler==0.12.1
-      - dask==2024.5.1
-      - dask-cuda==24.6.0
-      - dask-cudf-cu12==24.6.1
-      - dask-expr==1.1.1
-      - dask-image==2024.5.3
-      - datasets==3.1.0
-      - datashader==0.16.3
-      - defusedxml==0.7.1
-      - dill==0.3.8
-      - distributed==2024.5.1
-      - distributed-ucxx-cu12==0.38.0
-      - einops==0.8.0
-      - et-xmlfile==2.0.0
-      - fasteners==0.19
-      - fastjsonschema==2.20.0
-      - fastrlock==0.8.2
-      - fonttools==4.55.0
-      - fqdn==1.5.1
-      - frozenlist==1.5.0
-      - fsspec==2023.6.0
-      - furl==2.1.3
-      - future==1.0.0
-      - geojson==3.1.0
-      - geopandas==1.0.1
-      - get-annotations==0.1.2
-      - grpcio==1.68.0
-      - h11==0.14.0
-      - h5py==3.12.1
-      - httpcore==1.0.7
-      - httpx==0.27.2
-      - huggingface-hub==0.26.2
-      - igraph==0.11.8
-      - imagecodecs==2024.9.22
-      - imageio==2.36.0
-      - importlib-resources==6.4.5
-      - ipywidgets==8.1.5
-      - isoduration==20.11.0
-      - jmespath==1.0.1
-      - joblib==1.4.2
-      - json5==0.9.28
-      - jupyter==1.1.1
-      - jupyter-console==6.6.3
-      - jupyter-events==0.10.0
-      - jupyter-lsp==2.2.5
-      - jupyter-server==2.14.2
-      - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.2.6
-      - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.27.3
-      - jupyterlab-widgets==3.0.13
-      - kiwisolver==1.4.7
-      - lazy-loader==0.4
-      - legacy-api-wrap==1.4.1
-      - leidenalg==0.10.2
-      - libucx-cu12==1.15.0.post1
-      - lightgbm==4.5.0
-      - llvmlite==0.43.0
-      - locket==1.0.0
-      - loguru==0.7.2
-      - lxml==5.3.0
-      - markdown==3.7
-      - markdown-it-py==3.0.0
-      - matplotlib==3.9.2
-      - mdurl==0.1.2
-      - mistune==3.0.2
-      - mpmath==1.3.0
-      - msgpack==1.1.0
-      - multidict==6.1.0
-      - multipledispatch==1.0.0
-      - multiprocess==0.70.16
-      - multiscale-spatial-image==1.0.1
-      - natsort==8.4.0
-      - nbclient==0.10.0
-      - nbconvert==7.16.4
-      - nbformat==5.10.4
-      - networkx==3.2.1
-      - notebook==7.2.2
-      - notebook-shim==0.2.4
-      - numba==0.60.0
-      - numcodecs==0.12.1
-      - numpy==1.26.4
-      - nvidia-cublas-cu12==12.1.3.1
-      - nvidia-cuda-cupti-cu12==12.1.105
-      - nvidia-cuda-nvrtc-cu12==12.1.105
-      - nvidia-cuda-runtime-cu12==12.1.105
-      - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu12==11.0.2.54
-      - nvidia-curand-cu12==10.3.2.106
-      - nvidia-cusolver-cu12==11.4.5.107
-      - nvidia-cusparse-cu12==12.1.0.106
-      - nvidia-ml-py==12.535.161
-      - nvidia-nccl-cu12==2.20.5
-      - nvidia-nvjitlink-cu12==12.6.85
-      - nvidia-nvtx-cu12==12.1.105
-      - nvitop==1.3.2
-      - nvtx==0.2.10
-      - ome-zarr==0.9.0
-      - opencv-python==4.10.0.84
-      - openpyxl==3.1.5
-      - orderedmultidict==1.0.1
-      - overrides==7.7.0
-      - pandarallel==1.6.5
-      - pandas==2.2.2
-      - pandocfilters==1.5.1
-      - param==2.1.1
-      - paramiko==3.5.0
-      - parse==1.20.2
-      - partd==1.4.2
-      - pathlib2==2.3.7.post1
-      - patsy==1.0.1
-      - peft==0.13.2
-      - pims==0.7
-      - pkgconfig==1.5.5
-      - pooch==1.8.2
-      - prometheus-client==0.21.0
-      - propcache==0.2.0
-      - protobuf==5.28.3
-      - pyarrow==16.1.0
-      - pycocotools==2.0.8
-      - pyct==0.5.0
-      - pydantic==1.10.4
-      - pyjwt==2.8.0
-      - pylibraft-cu12==24.6.0
-      - pynacl==1.5.0
-      - pynndescent==0.5.13
-      - pynvjitlink-cu12==0.3.0
-      - pynvml==11.4.1
-      - pyogrio==0.10.0
-      - pyparsing==3.2.0
-      - pyproj==3.6.1
-      - python-json-logger==2.0.7
-      - pytorch-lightning==2.4.0
-      - pyvips==2.2.3
-      - raft-dask-cu12==24.6.0
-      - rapids-dask-dependency==24.6.0
-      - rasterio==1.4.2
-      - regex==2024.11.6
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - rich==13.9.4
-      - rmm-cu12==24.6.0
-      - s3fs==2023.6.0
-      - safetensors==0.4.5
-      - scanpy==1.10.3
-      - scikit-image==0.22.0
-      - scikit-learn==1.5.2
-      - scipy==1.13.1
-      - seaborn==0.13.2
-      - send2trash==1.8.3
-      - session-info==1.0.0
-      - shapely==2.0.6
-      - slicerator==1.1.0
-      - sniffio==1.3.1
-      - sortedcontainers==2.4.0
-      - spatial-image==1.1.0
-      - spatialdata==0.2.5.post0
-      - statsmodels==0.14.4
-      - stdlib-list==0.11.0
-      - sympy==1.13.3
-      - tblib==3.0.0
-      - tensorboard==2.18.0
-      - tensorboard-data-server==0.7.2
-      - termcolor==2.5.0
-      - terminado==0.18.1
-      - texttable==1.7.0
-      - threadpoolctl==3.5.0
-      - tidecv==1.0.1
-      - tifffile==2024.8.30
-      - timm==1.0.11
-      - tinycss2==1.4.0
-      - tokenizers==0.20.3
-      - toolz==1.0.0
-      - torch==2.4.1
-      - torch-geometric==2.6.1
-      - torch_cluster==1.6.3
-      - torch_scatter==2.1.2
-      - torch_sparse==0.6.18
-      - torch_spline_conv==1.2.2
-      - torchmetrics==1.6.0
-      - torchaudio==2.4.1
-      - torchvision==0.19.1
-      - transformers==4.46.3
-      - triton==3.0.0
-      - types-python-dateutil==2.9.0.20241003
-      - tzdata==2024.2
-      - ucx-py-cu12==0.38.0
-      - ucxx-cu12==0.38.0
-      - ujson==5.10.0
-      - umap-learn==0.5.7
-      - uri-template==1.3.0
-      - urllib3==1.26.20
-      - webcolors==24.11.1
-      - webencodings==0.5.1
-      - websocket-client==1.8.0
-      - werkzeug==3.1.3
-      - widgetsnbextension==4.0.13
-      - wrapt==1.17.0
-      - xarray==2024.7.0
-      - xarray-dataclasses==1.8.0
-      - xarray-datatree==0.0.15
-      - xarray-schema==0.0.3
-      - xarray-spatial==0.4.0
-      - xxhash==3.5.0
-      - yarl==1.18.0
-      - zarr==2.18.2
-      - zict==3.0.0
+  
+  # 开发工具
+  - cython=3.0.11=py39h5eee18b_0
+  - ninja=1.12.1=h06a4308_0
+  - cffi=1.17.1=py39h1fdaa30_0
+  - cryptography=43.0.3=py39h7825ff9_1
+  
+  # Jupyter生态系统
+  - jupyter=1.1.1
+  - jupyterlab=4.2.6
+  - notebook=7.2.2
+  - ipython=8.15.0=py39h06a4308_0
+  - ipykernel=6.29.5=py39h06a4308_0
+  - ipywidgets=8.1.5
+  
+  # 数据处理基础包
+  - numpy=1.26.4
+  - scipy=1.13.1
+  - pandas=2.2.2
+  - matplotlib=3.9.2
+  - scikit-learn=1.5.2
+  - h5py=3.12.1
+
+  # 标记需要安装pip包
+  - pip
+
 prefix: /opt/conda
