--- a/cfgs/cfgs_her2st.yaml
+++ b/cfgs/cfgs_her2st.yaml
@@ -21,11 +21,11 @@ HyperParams:
   loss_align: RMSE          # balanceMSE # ['RMSE', 'MSE', 'CE', 'L1', InfoNCE] ' loss function (default: RMSE)'
   lambda_main:  0.3         # lambda weight for main pred loss (default: 0.3)
   lambda_rec:   0.6         # lambda weight for reconstruction loss (default: 0.6)
-  lambda_align: 0.1         # lambda weight for cross-modal alignment loss (default: 0.1)
+  lambda_align: 0.1        # lambda weight for cross-modal alignment loss (default: 0.1)
 
   pre_extracted: False      # use pre-extracted features or not (default: False)
   architecture: CUCA        # CUCA, CUCAMLP, hist2cell, FMMLP, MLP
-  backbone:     virchow2    # virchow2, virchow  ...
+  backbone:     hoptimus0    # virchow2, virchow  ...
   hidden_dim: 512           # hidden dimension for the model
   proj_dim:   512           # projection dimension for the model
   num_cls:    39            # number of classes for the model
@@ -33,13 +33,13 @@ HyperParams:
 
 LoraCfgParams:       
   ft_lora: True                   # whether to use lora or not
-  r: 8                          # dimensions of a low-rank matrix
+  r: 16                         # dimensions of a low-rank matrix
   lora_alpha: 16                  # alpha parameter in lora
   target_modules: []              # target modules for lora
   lora_dropout: 0.1               # dropout for lora
   bias: 'none'                    # bias for lora
   modules_to_save:                
-  only_spec_blocks: ["30", "31"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
+  only_spec_blocks: ["38", "39"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
 
 
 COMMON:
