--- a/cfgs/cfgs_lung.yaml
+++ b/cfgs/cfgs_lung.yaml
@@ -1,5 +1,5 @@
-CKPTS:
-  exp_code:         exp_reproduce                             # experiment code
+CKPTS: # CUDA_VISIBLE_DEVICES=2 python main.py -c cfgs/cfgs_lung.yaml 
+  exp_code:         DeMM_virchow2_ls2_rk8                           # experiment code
   data_root:        example_data/humanlung_cell2location      # data directory containing the raw data for each task
   split_data_root:  cross_val_splits/humanlung_cell2location  # directory containing the split files for each dataset
   split_ids:        ["A37", "A42", "A48", "A50"]              # split ids used for training
@@ -24,7 +24,7 @@ HyperParams:
   lambda_align: 0.1         # lambda weight for cross-modal alignment loss (default: 0.1)
 
   pre_extracted: False      # use pre-extracted features or not (default: False)
-  architecture: CUCA        # CUCA, CUCAMLP, hist2cell, FMMLP, MLP
+  architecture: DeMM        # DeMM CUCA, CUCAMLP, hist2cell, FMMLP, MLP
   backbone:     virchow2    # virchow2, virchow  ...
   hidden_dim: 512           # hidden dimension for the model
   proj_dim:   512           # projection dimension for the model
@@ -33,13 +33,13 @@ HyperParams:
 
 LoraCfgParams:       
   ft_lora: True                   # whether to use lora or not
-  r: 16                            # dimensions of a low-rank matrix
+  r: 8                            # dimensions of a low-rank matrix
   lora_alpha: 16                  # alpha parameter in lora
   target_modules: []              # target modules for lora
   lora_dropout: 0.1               # dropout for lora
   bias: 'none'                    # bias for lora
   modules_to_save:                
-  only_spec_blocks: ["38", "39"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
+  only_spec_blocks: ["30", "31"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
 
 
 COMMON:
