--- a/cfgs/cfgs_stnet.yaml
+++ b/cfgs/cfgs_stnet.yaml
@@ -1,5 +1,5 @@
-CKPTS:
-  exp_code:         exp_reproduce                 # experiment code
+CKPTS: #  CUDA_VISIBLE_DEVICES=4 python main.py -c cfgs/cfgs_stnet.yaml
+  exp_code:         DeMM_virchow2_ls2_rk8                # experiment code
   data_root:        example_data/stnet            # data directory containing the raw data for each task
   split_data_root:  cross_val_splits/stnet        # directory containing the split files for each dataset
   split_ids:        [0, 1, 2, 3]                  # split ids used for training
@@ -24,8 +24,8 @@ HyperParams:
   lambda_align: 0.1         # lambda weight for cross-modal alignment loss (default: 0.1)
 
   pre_extracted: False      # use pre-extracted features or not (default: False)
-  architecture: CUCA        # CUCA, CUCAMLP, hist2cell, FMMLP, MLP
-  backbone:     hoptimus0    # virchow2, virchow  ...
+  architecture: DeMM        # DeMM CUCA, CUCAMLP, hist2cell, FMMLP, MLP
+  backbone:     virchow2    # virchow2, virchow  ...
   hidden_dim: 512           # hidden dimension for the model
   proj_dim:   512           # projection dimension for the model
   num_cls:    39            # number of classes for the model
@@ -33,13 +33,13 @@ HyperParams:
 
 LoraCfgParams:       
   ft_lora: True                   # whether to use lora or not
-  r: 16                            # dimensions of a low-rank matrix
+  r: 8                            # dimensions of a low-rank matrix
   lora_alpha: 16                  # alpha parameter in lora
   target_modules: []              # target modules for lora
   lora_dropout: 0.1               # dropout for lora
   bias: 'none'                    # bias for lora
   modules_to_save:                
-  only_spec_blocks: ["38", "39"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
+  only_spec_blocks: ["30", "31"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
 
 
 COMMON:
