--- a/cfgs/cfgs_stnet.yaml
+++ b/cfgs/cfgs_stnet.yaml
@@ -1,9 +1,9 @@
 CKPTS: #  CUDA_VISIBLE_DEVICES=4 python main.py -c cfgs/cfgs_stnet.yaml
-  exp_code:         DeMM_virchow2_ls2_rk8                # experiment code
+  exp_code:         DeMM_virchow2_ls2_rk16_withoutDes                # experiment code
   data_root:        example_data/stnet            # data directory containing the raw data for each task
   split_data_root:  cross_val_splits/stnet        # directory containing the split files for each dataset
   split_ids:        [0, 1, 2, 3]                  # split ids used for training
-  results_dir:      results                       # directory where results will be dumped
+  results_dir:      ablation                       # directory where results will be dumped
   independent_root:                               # directory containing the independent test data
   independent_list:                               # list of independent test sets
 
@@ -12,7 +12,7 @@ HyperParams:
   batch_size: 128           # input batch size for training (default: 128)
   num_workers: 16           # data loader workers (default: 16)
   lr_rate: 0.002            # learning rate (default: 0.002)
-  optim_fn: adam            # optimizer [adam, sgd, rmsprop, adadelta, adagrad, adamw]
+  optim_fn: adam            # optimizer [adam, sgd, rmsprop, adadelta, adagrad, adamW]
   weight_reg: 0.0001        # weight decay (default: 1e-4)
   scheduler_fn: OneCycleLR  # optimizer scheduler [CosineAnnealingLR CyclicLR LinearLR OneCycleLR StepLR, or none]
 
@@ -33,7 +33,7 @@ HyperParams:
 
 LoraCfgParams:       
   ft_lora: True                   # whether to use lora or not
-  r: 8                            # dimensions of a low-rank matrix
+  r: 16                            # dimensions of a low-rank matrix
   lora_alpha: 16                  # alpha parameter in lora
   target_modules: []              # target modules for lora
   lora_dropout: 0.1               # dropout for lora
