--- a/cfgs/cfgs_lung.yaml
+++ b/cfgs/cfgs_lung.yaml
@@ -1,9 +1,9 @@
-CKPTS: # CUDA_VISIBLE_DEVICES=0 python main.py -c cfgs/cfgs_lung.yaml 
-  exp_code:         DeMM_virchow2_ls2_rk8                           # experiment code
+CKPTS: # CUDA_VISIBLE_DEVICES=3 python main.py -c cfgs/cfgs_lung.yaml 
+  exp_code:         DeMM_virchow2_ls2_rk16                           # experiment code
   data_root:        example_data/humanlung_cell2location      # data directory containing the raw data for each task
   split_data_root:  cross_val_splits/humanlung_cell2location  # directory containing the split files for each dataset
   split_ids:        ["A37", "A42", "A48", "A50"]              # split ids used for training
-  results_dir:      ablation                                   # directory where results will be dumped
+  results_dir:      results                                   # directory where results will be dumped
   independent_root:                                           # directory containing the independent test data
   independent_list:                                           # list of independent test sets
 
@@ -19,9 +19,9 @@ HyperParams:
   loss_main:  RMSE          # balanceMSE # ['RMSE', 'MSE', 'CE', 'L1', 'Pearson'] ' loss function (default: RMSE)'
   loss_rec:   RMSE          # balanceMSE # ['RMSE', 'MSE', 'CE', 'L1', 'Pearson'] ' loss function (default: RMSE)'
   loss_align: RMSE          # balanceMSE # ['RMSE', 'MSE', 'CE', 'L1', InfoNCE] ' loss function (default: RMSE)'
-  lambda_main:  0.4         # lambda weight for main pred loss (default: 0.3)
-  lambda_rec:   0.3         # lambda weight for reconstruction loss (default: 0.6)
-  lambda_align: 0.3         # lambda weight for cross-modal alignment loss (default: 0.1)
+  lambda_main:  0.3         # lambda weight for main pred loss (default: 0.3)
+  lambda_rec:   0.6         # lambda weight for reconstruction loss (default: 0.6)
+  lambda_align: 0.1         # lambda weight for cross-modal alignment loss (default: 0.1)
 
   pre_extracted: False      # use pre-extracted features or not (default: False)
   architecture: DeMM        # DeMM CUCA, CUCAMLP, hist2cell, FMMLP, MLP
@@ -33,7 +33,7 @@ HyperParams:
 
 LoraCfgParams:       
   ft_lora: True                   # whether to use lora or not
-  r: 8                            # dimensions of a low-rank matrix
+  r: 16                            # dimensions of a low-rank matrix
   lora_alpha: 16                  # alpha parameter in lora
   target_modules: []              # target modules for lora
   lora_dropout: 0.1               # dropout for lora
