--- a/cfgs/cfgs_lung.yaml
+++ b/cfgs/cfgs_lung.yaml
@@ -1,5 +1,5 @@
-CKPTS: # CUDA_VISIBLE_DEVICES=3 python main.py -c cfgs/cfgs_lung.yaml 
-  exp_code:         DeMM_virchow2_ls2_rk16                           # experiment code
+CKPTS: # CUDA_VISIBLE_DEVICES=1 python main.py -c cfgs/cfgs_lung.yaml 
+  exp_code:         DeMM_hoptimus0_ls2_rk16                          # experiment code
   data_root:        example_data/humanlung_cell2location      # data directory containing the raw data for each task
   split_data_root:  cross_val_splits/humanlung_cell2location  # directory containing the split files for each dataset
   split_ids:        ["A37", "A42", "A48", "A50"]              # split ids used for training
@@ -10,7 +10,7 @@ CKPTS: # CUDA_VISIBLE_DEVICES=3 python main.py -c cfgs/cfgs_lung.yaml
 HyperParams:
   max_epochs: 100           # maximum number of epochs to train (default: 100)
   batch_size: 128           # input batch size for training (default: 128)
-  num_workers: 16           # data loader workers (default: 16)
+  num_workers: 0           # data loader workers (default: 16)
   lr_rate: 0.002            # learning rate (default: 0.002)
   optim_fn: adam           # optimizer [adam, sgd, rmsprop, adadelta, adagrad, adamW]
   weight_reg: 0.0001        # weight decay (default: 1e-4)
@@ -25,7 +25,7 @@ HyperParams:
 
   pre_extracted: False      # use pre-extracted features or not (default: False)
   architecture: DeMM        # DeMM CUCA, CUCAMLP, hist2cell, FMMLP, MLP
-  backbone:     virchow2    # virchow2, virchow  ...
+  backbone:     hoptimus0    # virchow2, virchow  ...
   hidden_dim: 512           # hidden dimension for the model
   proj_dim:   512           # projection dimension for the model
   num_cls:    80            # number of classes for the model
@@ -33,13 +33,13 @@ HyperParams:
 
 LoraCfgParams:       
   ft_lora: True                   # whether to use lora or not
-  r: 16                            # dimensions of a low-rank matrix
+  r: 16                          # dimensions of a low-rank matrix
   lora_alpha: 16                  # alpha parameter in lora
   target_modules: []              # target modules for lora
   lora_dropout: 0.1               # dropout for lora
   bias: 'none'                    # bias for lora
   modules_to_save:                
-  only_spec_blocks: ["30", "31"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
+  only_spec_blocks: ["38", "39"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
 
 
 COMMON:
