--- a/cfgs/cfgs_her2st_moe.yaml
+++ b/cfgs/cfgs_her2st_moe.yaml
@@ -1,18 +1,18 @@
-CKPTS: # CUDA_VISIBLE_DEVICES=1 python main.py -c cfgs/cfgs_lung_moe.yaml 
-  exp_code:         MoE_DeMM_virchow2_ls2_rk16                          # experiment code
-  data_root:        example_data/humanlung_cell2location      # data directory containing the raw data for each task
-  split_data_root:  cross_val_splits/humanlung_cell2location  # directory containing the split files for each dataset
-  split_ids:        ["A37", "A42", "A48", "A50"]              # split ids used for training
-  results_dir:      results                                   # directory where results will be dumped
-  independent_root:                                           # directory containing the independent test data
-  independent_list:                                           # list of independent test sets
+CKPTS:      # CUDA_VISIBLE_DEVICES=1 python main.py -c cfgs/cfgs_her2st_moe.yaml 
+  exp_code:         MoE_DeMM_virchow2_ls2_rk16              # experiment code
+  data_root:        example_data/her2st           # data directory containing the raw data for each task
+  split_data_root:  cross_val_splits/her2st       # directory containing the split files for each dataset
+  split_ids:        [0,1,2,3]                  # split ids used for training
+  results_dir:      results                       # directory where results will be dumped
+  independent_root:                               # directory containing the independent test data
+  independent_list:                               # list of independent test sets
 
 HyperParams:
   max_epochs: 100           # maximum number of epochs to train (default: 100)
   batch_size: 128           # input batch size for training (default: 128)
   num_workers: 0           # data loader workers (default: 16)
   lr_rate: 0.002            # learning rate (default: 0.002)
-  optim_fn: adam           # optimizer [adam, sgd, rmsprop, adadelta, adagrad, adamW]
+  optim_fn: adam            # optimizer [adam, sgd, rmsprop, adadelta, adagrad, adamW]
   weight_reg: 0.0001        # weight decay (default: 1e-4)
   scheduler_fn: OneCycleLR  # optimizer scheduler [CosineAnnealingLR CyclicLR LinearLR OneCycleLR StepLR, or none]
 
@@ -21,26 +21,27 @@ HyperParams:
   loss_align: RMSE          # balanceMSE # ['RMSE', 'MSE', 'CE', 'L1', InfoNCE] ' loss function (default: RMSE)'
   lambda_main:  0.3         # lambda weight for main pred loss (default: 0.3)
   lambda_rec:   0.6         # lambda weight for reconstruction loss (default: 0.6)
-  lambda_align: 0.1         # lambda weight for cross-modal alignment loss (default: 0.1)
+  lambda_align: 0.1        # lambda weight for cross-modal alignment loss (default: 0.1)
 
   pre_extracted: False      # use pre-extracted features or not (default: False)
-  architecture: MoE_DeMM    # DeMM CUCA, CUCAMLP, hist2cell, FMMLP, MLP, MoE_DeMM
-  backbone:     virchow2    # virchow2, virchow  hoptimus0...
+  architecture: MoE_DeMM        # DeMM CUCA, CUCAMLP, hist2cell, FMMLP, MLP, MoE_DeMM
+  backbone:     virchow2     # virchow2, virchow  hoptimus0...
   hidden_dim: 512           # hidden dimension for the model
   proj_dim:   512           # projection dimension for the model
-  num_cls:    80            # number of classes for the model
+  num_cls:    39            # number of classes for the model
 
 
 LoraCfgParams:       
   ft_lora: True                   # whether to use lora or not
-  r: 16                          # dimensions of a low-rank matrix
+  r: 16                         # dimensions of a low-rank matrix
   lora_alpha: 16                  # alpha parameter in lora
   target_modules: []              # target modules for lora
   lora_dropout: 0.1               # dropout for lora
   bias: 'none'                    # bias for lora
   modules_to_save:                
-  only_spec_blocks: ["30", "31"]  # uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
+  only_spec_blocks: ["30", "31"]  #  phikon2 uni_v1: ["22", "23"], virchow2: ["30", "31"], hoptimus0: ["38", "39"]
   num_experts: 4                  # number of experts for MoE
+
 
 COMMON:
   gpu: '0'
